# vpn

./: .gitignore  Cargo.toml  README.md  rustc-ice-2026-02-12T10_44_30-46506.txt  wg_91.99.137.110.conf
.cargo/: config.toml
gui/: package.json  pnpm-lock.yaml
gui/src/: App.vue
gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.exe.manifest
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: builld.rs  lib.rs  sidecar_bridge.rs
gui/src-tauri/src/commands/: apps.rs  geo.rs  mod.rs  pinger.rs  state.rs  tunnel.rs  utils.rs  vpn.rs
gui/src-tauri/src/commands/tunnel/: app_filter.rs  apps.rs  configs.rs  metadata.rs  mod.rs  tunnel.rs
gui/src/assets/: globals.css
gui/src/components/: AppSelector.vue  Drawer.vue  Map.vue  NewConfigurationModal.vue  NodeSelector.vue  Settings.vue  SidePanel.vue  Toolbar.vue  TunnelModeToggle.vue
gui/src/components/app_routing/: AppRouting.vue  AppRow.vue
gui/src/lib/: apps.ts  geo.ts  network.ts  tauri.ts  tunnel.ts  vpn.ts
sidecar/src/: main.rs
src/: main.rs  ssh.rs  wireguard.rs
vpn-lib/: .gitignore  Cargo.toml
vpn-lib/src/: lib.rs  network.rs  ssh.rs
vpn-lib/src/app_filter/: mod.rs  scanner.rs  shunt.rs
vpn-lib/src/wireguard/: client.rs  interface.rs  mod.rs  peer.rs  server.rs  state.rs
